Bump with custom changes in the fork